<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"

            android:orientation="vertical">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorNormalText"
                android:text="@string/main_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/main_section1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorSectionTitles"
                android:padding="6dp"
                android:text="@string/main_section1_title"
                android:textColor="@color/colorNormalText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/main_section1_counter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/colorNormalText"
                android:text="@string/main_section1_counterLabel" />

            <TextView
                android:id="@+id/main_section1_preferences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:textColor="@color/colorNormalText"
                android:text="@string/main_section1_preferencesLabel" />

            <Button
                android:id="@+id/button_editPreferences"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="editTeaPreferences"
                android:text="@string/main_section1_buttonPreferences" />

            <Button
                android:id="@+id/button_setDefaultPreferences"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="resetTeaPreferences"
                android:text="@string/main_section1_buttonDefaultPreferences" />

            <TextView
                android:id="@+id/main_section2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@color/colorSectionTitles"
                android:padding="6dp"
                android:text="@string/main_section2_title"
                android:textColor="@color/colorNormalText"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkExternal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkSdMounted"
                android:text="@string/main_section2_checkbox"/>

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/main_section2_status" />

            <EditText
                android:id="@+id/editTextFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/savebutton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:onClick="saveFile"
                    android:text="@string/main_section2_savebutton" />

                <Button
                    android:id="@+id/loadbutton"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:onClick="loadFile"
                    android:text="@string/main_section2_loadbutton" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>